--- a/36432-h/36432-h.htm
+++ b/36432-h/36432-h.htm
@@ -268,7 +268,7 @@ the people of the churches of America.</p>
     <td align="right">66</td>
   </tr>
   <tr>
-    <td align="left"><a href="#CHAPTER_VIII">VII. Rise of Democracy</a></td>
+    <td align="left"><a href="#CHAPTER_VIII">VIII. Rivals of Coal</a></td>
     <td align="right">78</td>
   </tr>
   <tr>
